[package]
name = "atcoder-sample-downloder"
version = "0.1.0"
authors = ["togatoga <togasakitogatoga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11.0"
reqwest = { git = "https://github.com/seanmonstar/reqwest", branch = "master"}
clap = "2.33.0"
url = "2.1.0"
failure = "0.1.6"
tokio = "0.2.0-alpha.6"
selectors = "0.21.0"
itertools = "0.8"
